fixed z-index for DialogImgUpload

--- a/src/components/ui/Header/header.module.scss
+++ b/src/components/ui/Header/header.module.scss
@@ -1,6 +1,5 @@
 .header {
   position: fixed;
-  z-index: 10;
   top: 0;
   left: 0;
   display: flex;
